pdf uploaded and readme complete

--- a/README
+++ b/README
@@ -2,6 +2,7 @@ updated by Jan 23, 2018, written by Weixu ZHU
 
 This is a simple testbench of using lua to calc 3D location of apriltags from its 2D projection in
 the images, and detect and tracking blocks.
+the algorithm is described in detail in the .pdf file
 
 we run this on ubuntu 16.04 LTS, with lua5.2 and OpenCV 3.0.0, 
    other versions are untested, you can have a try
